--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
 Theme Name: BlankSlate
 Theme URI: https://github.com/tidythemes/blankslate
@@ -13,6 +14,433 @@ Text Domain: blankslate
 BlankSlate WordPress Theme © 2011-2019 TidyThemes
 BlankSlate is distributed under the terms of the GNU GPL
 */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+form input,
+form textarea,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
 
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}body{line-height:1}button{outline:0}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}q{display:inline;font-style:italic}q:before{content:'"';font-style:normal}q:after{content:'"';font-style:normal}textarea,input[type="text"],input[type="button"],input[type="submit"],input[type="reset"],input[type="search"],input[type="password"]{-webkit-appearance:none;appearance:none;border-radius:0}table{border-collapse:collapse;border-spacing:0}th,td{padding:2px}big{font-size:120%}small,sup,sub{font-size:80%}sup{vertical-align:super}sub{vertical-align:sub}dd{margin-left:20px}kbd,tt{font-family:courier;font-size:12px}ins{text-decoration:underline}del,strike,s{text-decoration:line-through}dt{font-weight:bold}address,cite,var{font-style:italic}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}*{box-sizing:border-box;-webkit-tap-highlight-color:transparent}
-.sticky{}.bypostauthor{}.wp-caption{}.wp-caption-text{}.gallery-caption{}.alignright{}.alignleft{}.aligncenter{}.screen-reader-text{clip:rect(1px, 1px, 1px, 1px);position:absolute !important}
+body {
+  line-height: 1;
+}
+
+button {
+  outline: 0;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
+q {
+  display: inline;
+  font-style: italic;
+}
+
+q:before {
+  content: '"';
+  font-style: normal;
+}
+
+q:after {
+  content: '"';
+  font-style: normal;
+}
+
+textarea,
+input[type="text"],
+input[type="button"],
+input[type="submit"],
+input[type="reset"],
+input[type="search"],
+input[type="password"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+  border-radius: 0;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+th,
+td {
+  padding: 2px;
+}
+
+big {
+  font-size: 120%;
+}
+
+small,
+sup,
+sub {
+  font-size: 80%;
+}
+
+sup {
+  vertical-align: super;
+}
+
+sub {
+  vertical-align: sub;
+}
+
+dd {
+  margin-left: 20px;
+}
+
+kbd,
+tt {
+  font-family: courier;
+  font-size: 12px;
+}
+
+ins {
+  text-decoration: underline;
+}
+
+del,
+strike,
+s {
+  text-decoration: line-through;
+}
+
+dt {
+  font-weight: bold;
+}
+
+address,
+cite,
+var {
+  font-style: italic;
+}
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.screen-reader-text {
+  clip: rect(1px, 1px, 1px, 1px);
+  position: absolute !important;
+}
+
+/** Variables **/
+:root {
+  /** Colors **/
+  --selection-color: rgba(193, 111, #000, #D4D4D7);
+  /** Fonts **/
+  --main-font-family: futura-pt, sans-serif;
+  /** Sizes **/
+  --wrap-width: 60rem;
+  /** Hamburger **/
+  --hamburger-width: 30px;
+  --hamburger-line-height: 2px;
+  --hamburger-spacing: 10px;
+  --hamburger-spacing-negative: -10px;
+  --hamburger-color: #000;
+  --hamburger-hover-color: #000;
+  --hamburger-timer: .2s;
+  --hamburger-slow-timer: .5s;
+}
+
+/* Default Styles */
+html {
+  height: 100%;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+  scrollbar-width: none;
+}
+
+html ::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  height: 100%;
+  font-family: var(--main-font-family);
+}
+
+#wrapper {
+  min-height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+::-moz-selection {
+  background: var(--selection-color);
+}
+
+::selection {
+  background: var(--selection-color);
+}
+
+.wrap {
+  width: var(--wrap-width);
+  margin: auto;
+}
+
+/* Convert px to rem */
+/* Font Weight */
+.bold,
+strong {
+  font-weight: bold;
+}
+
+.regular {
+  font-weight: normal;
+}
+
+.italic,
+em {
+  font-style: italic;
+}
+
+/* Responsive Element -- Good for making perfect squares or circles */
+.responsive-element {
+  position: relative;
+}
+
+.responsive-element:after {
+  content: '';
+  display: block;
+  padding-top: 100%;
+}
+
+/* Responsive Iframe, Object, Embed */
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 1.875rem;
+  height: 0;
+  overflow: hidden;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/* Typography */
+a {
+  text-decoration: none;
+}
+
+.content h1 {
+  font-size: 2.5rem;
+  line-height: 2.8125rem;
+}
+
+.content h2 {
+  font-size: 1.875rem;
+  line-height: 3.125rem;
+}
+
+.content h3 {
+  font-size: 1.25rem;
+  line-height: 1.5625rem;
+}
+
+.content h4 {
+  font-size: 1.125rem;
+  line-height: 1.4375rem;
+}
+
+.content p {
+  font-size: 1rem;
+  line-height: 1.5625rem;
+}
+
+.content ul {
+  list-style: disc;
+  padding-left: 1.5625rem;
+  margin-bottom: 1.5625rem;
+}
+
+.content ul li {
+  font-size: 1rem;
+  line-height: 1.5625rem;
+}
+
+.content ol {
+  list-style: decimal;
+  padding-left: 1.5625rem;
+  margin-bottom: 1.5625rem;
+}
+
+.content ol li {
+  font-size: 1rem;
+  line-height: 1.5625rem;
+}
+
+/* Input Styles */
+
+form,
+form input,
+form textarea {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+form input::-webkit-input-placeholder,
+form textarea::-webkit-input-placeholder {
+  color: var(--input-color);
+}
+
+form input:-moz-placeholder,
+form textarea:-moz-placeholder {
+  color: var(--input-color);
+  opacity: 1;
+}
+
+form input::-moz-placeholder,
+form textarea::-moz-placeholder {
+  color: var(--input-color);
+  opacity: 1;
+}
+
+form input:-ms-input-placeholder,
+form textarea:-ms-input-placeholder {
+  color: var(--input-color);
+}
+
+form input:placeholder-shown,
+form textarea:placeholder-shown {
+  color: var(--input-color);
+}
+
+/* Mobile Styles */
+@media screen and (min-width: var(--wrap-width)) {
+  /* Turns "Stacked" Text Into One Line */
+  .linebreak br {
+    content: ' ';
+  }
+  .linebreak br:after {
+    content: ' ';
+  }
+  .wrap {
+    width: 90%;
+  }
+}
+/*# sourceMappingURL=style.css.map */
