--- a/style.scss
+++ b/style.scss
@@ -19,14 +19,13 @@ BlankSlate is distributed under the terms of the GNU GPL
 /** Variables **/
 :root {
     /** Colors **/
-    --selection-color: rgba(193, 111, #000, #D4D4D7);
+    --selection-color: rgba(#B4d5fe, .6);
 
     /** Fonts **/
     --main-font-family: futura-pt, sans-serif;
 
     /** Sizes **/
     --wrap-width: 60rem;
-
 
     /** Hamburger **/
     --hamburger-width: 30px;
