compiled variable change

--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ section {
 /** Variables **/
 :root {
   /** Colors **/
-  --selection-color: rgba(193, 111, #000, #D4D4D7);
+  --selection-color: rgba(#B4d5fe, .6);
   /** Fonts **/
   --main-font-family: futura-pt, sans-serif;
   /** Sizes **/
